--- a/index.html
+++ b/index.html
@@ -9,30 +9,13 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg menuNavegacion">
-          <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Inicio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Contacto</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Galería</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link" href="#">Preguntas frecuentes</a>
-                </li>
-              </ul>
-              
-            </div>
-          </div>
-        </nav>
+        <ul>
+          <li><a href="">Item</a></li>
+          <li><a href="">Item</a></li>
+          <li><a href="">Item</a></li>
+          <li><a href="">Item</a></li>
+          <li><a href="">Item</a></li>
+        </ul>
     </header>
     <main class="container-fluid">
         <section>
